# celery-sentinel-poll-repro

./: Dockerfile  README.md  celery_app.py  docker-compose.yml  pyproject.toml  run_repro.py  tasks.py
